# question-complextiy-estimation

./: .gitignore  README.md  pyproject.toml  tokenwise_entropy.py  utils.py
complexity_estimation/: tokenwise_entropy.py
data/: arc_ch_test.tsv  arc_ch_test_w_filtered_numerical_maj_complexity.tsv  arc_ch_test_w_maj_complexity.tsv  arc_ch_test_w_numerical_maj_complexity.tsv  arc_ch_train.tsv  arc_ch_train_w_filtered_numerical_maj_complexity.tsv  arc_ch_train_w_maj_complexity.tsv  arc_ch_train_w_numerical_maj_complexity.tsv  arc_ch_validation.tsv  arc_ch_validation_w_filtered_numerical_maj_complexity.tsv  arc_ch_validation_w_maj_complexity.tsv  arc_ch_validation_w_numerical_maj_complexity.tsv  arc_easy_test.tsv  arc_easy_train.tsv  arc_easy_validation.tsv  gpqa_train.tsv  gpqa_w_both_maj_complexities_v2.tsv  gpqa_w_both_maj_complexities_v3.tsv  gpqa_w_numerical and_nominal_maj_complexity.tsv  gpqa_w_numerical_maj_complexity.tsv  science_qa_test.tsv  science_qa_train.tsv  science_qa_validation.tsv  sciq_test.tsv  sciq_test_w_maj_complexity.tsv  sciq_validation.tsv  sciq_validation_w_maj_complexity.tsv
data_parsing/: data.ipynb  data.txt  qa_data.tsv
notebooks/: analysis.ipynb  analysis_gpqa.ipynb  analysis_mmlu.ipynb  analysis_reasoning.ipynb  analysis_roc_auc.ipynb  estimate_entropy.ipynb  estimate_entropy_chain_of_thought.ipynb  estimate_entropy_head.ipynb  estimate_entropy_single_token.ipynb  estimate_entropy_tail.ipynb  model_as_judge.ipynb  model_as_judge_analysis.ipynb  model_as_judge_complexity_by_education_level.ipynb  phi4_embedding_class_mmlu_pro.ipynb  (+5 more)
(+15 files in other folders)
