[tool.poetry]
name = "phi-4"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
tqdm = "^4.67.1"
torch = "^2.6.0"
transformers = "^4.48.2"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
accelerate = "^1.3.0"
huggingface-hub = {extras = ["cli"], version = "^0.28.1"}
optimum-quanto = "^0.2.6"
torchao = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
